NLP TP/texts/robotics/robotics.stackexchange_0000075907.txt
Q:

rgbdslam cmake_install halts; howto fix it?

compilation error:
[ 37%] Building CXX object rgbdslam_v2/CMakeFiles/rgbdslam.dir/src/glviewer.cpp.o
            In file included from /usr/include/GL/freeglut_std.h:128:0,
                             from /usr/include/GL/glut.h:17,
                             from /home/ubuntu/catkin_ws/src/rgbdslam_v2/src/glviewer.cpp:24:
            /usr/include/GL/gl.h:138:17: error: conflicting declaration ‘typedef double GLdouble’
             typedef double  GLdouble; /* double precision float */
                             ^
            In file included from /usr/include/qt4/QtOpenGL/QtOpenGL:5:0,
                             from /home/ubuntu/catkin_ws/src/rgbdslam_v2/src/glviewer.cpp:22:
            /usr/include/qt4/QtOpenGL/qgl.h:85:17: error: ‘GLdouble’ has a previous declaration as ‘typedef GLfloat GLdouble’
             typedef GLfloat GLdouble;
                             ^
            In file included from /usr/include/GL/gl.h:2059:0,
                             from /usr/include/GL/freeglut_std.h:128,
                             from /usr/include/GL/glut.h:17,
                             from /home/ubuntu/catkin_ws/src/rgbdslam_v2/src/glviewer.cpp:24:
            /usr/include/GL/glext.h:468:19: error: conflicting declaration ‘typedef ptrdiff_t GLsizeiptr’
             typedef ptrdiff_t GLsizeiptr;
                               ^
            In file included from /usr/include/qt4/QtOpenGL/qgl.h:79:0,
                             from /usr/include/qt4/QtOpenGL/QtOpenGL:5,
                             from /home/ubuntu/catkin_ws/src/rgbdslam_v2/src/glviewer.cpp:22:
            /usr/include/GLES2/gl2.h:69:25: error: ‘GLsizeiptr’ has a previous declaration as ‘typedef khronos_ssize_t GLsizeiptr’
             typedef khronos_ssize_t GLsizeiptr;
                                     ^
            In file included from /usr/include/GL/gl.h:2059:0,
                             from /usr/include/GL/freeglut_std.h:128,
                             from /usr/include/GL/glut.h:17,
                             from /home/ubuntu/catkin_ws/src/rgbdslam_v2/src/glviewer.cpp:24:
            /usr/include/GL/glext.h:469:19: error: conflicting declaration ‘typedef ptrdiff_t GLintptr’
             typedef ptrdiff_t GLintptr;
                               ^
            In file included from /usr/include/qt4/QtOpenGL/qgl.h:79:0,
                             from /usr/include/qt4/QtOpenGL/QtOpenGL:5,
                             from /home/ubuntu/catkin_ws/src/rgbdslam_v2/src/glviewer.cpp:22:
            /usr/include/GLES2/gl2.h:70:26: error: ‘GLintptr’ has a previous declaration as ‘typedef khronos_intptr_t GLintptr’
             typedef khronos_intptr_t GLintptr;
                                      ^
            make[2]: * [rgbdslam_v2/CMakeFiles/rgbdslam.dir/src/glviewer.cpp.o] Error 1
            make[1]: * [rgbdslam_v2/CMakeFiles/rgbdslam.dir/all] Error 2
            make: * [all] Error 2
            Invoking "make -j1 -l1" failed

Originally posted by Andre on ROS Answers with karma: 1 on 2016-08-22
Post score: 0

A:

A bit harsh maybe, but could you please use the search (or Google) before posting? We already have quite a few QAs about this exact issue:

RGBDSlam_V2 Error with make (although I wouldn't recommend what the (accepted) answer suggests)
Compiler errors while making rgbdslam on Nvidia Jetson TK1 (mentions TK1, but issue is similar)

to list a few. The answer to that last question seems to suggest this can be worked around.
And the author is apparently aware of this as well: see felixendres/rgbdslam_v2#17 fi.

Originally posted by gvdhoorn with karma: 86574 on 2016-08-22
This answer was ACCEPTED on the original site
Post score: 0

